<resources>
    <string name="app_name">Kota Wisata Batu</string>
    <string name="nama_developer">Yayan Rahmat Wijaya</string>
    <string name="email_developer">yayanraw@gmail.com</string>
    <string name="about">About</string>
    <string name="list_view">List View</string>
    <string name="grid_view">Grid View</string>
    <string name="card_view">Card View</string>
    <string name="nama_wisata">Nama Wisata</string>
    <string name="harga_tiket">150.000</string>
    <string name="alamat">Alamat</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="mata_uang">Rp.</string>
    <string name="favourite">Favourite</string>
    <string name="share">Share</string>
    <string name="no_telp_dummy">08123123123</string>
</resources>