<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/img_wisata"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            tools:src="@tools:sample/avatars"
            android:background="@drawable/shape_rounded"
            android:scaleType="fitXY"
            android:outlineProvider="background"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp">
            <TextView
                android:text="@string/mata_uang"
                style="@style/TextContentNoMargin"
                android:textStyle="bold"
                android:textSize="18sp"/>
            <TextView
                android:id="@+id/tv_harga_tiket"
                android:text="@string/harga_tiket"
                style="@style/TextContentNoMargin"
                android:textStyle="bold"
                android:textSize="18sp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="right">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_favorite"
                    app:icon="@drawable/ic_baseline_favorite_border_24"
                    app:iconTint="@color/red_500"
                    android:text="0"
                    android:layout_marginRight="8dp"
                    style="@style/MaterialButtonRounded"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_share"
                    app:icon="@drawable/ic_baseline_share_24"
                    app:iconTint="@color/blue_500"
                    style="@style/MaterialButtonRounded"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/tv_nama"
            style="@style/TextContent.SubtitleBlack"
            android:text="@string/nama_wisata"
            android:textSize="16sp"/>
        <View
            style="@style/HorizontalLine"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">
                <ImageView
                    style="@style/MiniIcon"
                    android:src="@drawable/ic_baseline_phone_24"
                    app:tint="@color/green_500"/>
                <TextView
                    android:id="@+id/tv_no_telp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:textSize="16sp"
                    style="@style/TextContentNoMargin.Subtitle"
                    android:text="@string/no_telp_dummy"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_telepon"
                    app:icon="@drawable/ic_baseline_phone_24"
                    app:iconTint="@color/red_500"
                    android:layout_marginRight="8dp"
                    style="@style/MaterialButtonLittleRounded"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="8dp"
                android:baselineAligned="false">
                <ImageView
                    style="@style/MiniIcon"
                    android:src="@drawable/ic_baseline_location_on_24"
                    app:tint="@color/green_500"/>
                <TextView
                    android:id="@+id/tv_alamat"
                    style="@style/TextContentNoMargin.Subtitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:maxLines="2"
                    android:textSize="16sp"
                    android:text="@string/lorem_ipsum"
                    android:layout_alignParentTop="true"
                    android:paddingRight="16dp"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_peta"
                    app:icon="@drawable/ic_baseline_location_on_24"
                    app:iconTint="@color/red_500"
                    android:layout_marginRight="8dp"
                    style="@style/MaterialButtonLittleRounded"/>
            </LinearLayout>
        </LinearLayout>
        <View
            style="@style/HorizontalLine"/>
        <TextView
            android:id="@+id/tv_deskripsi"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            style="@style/TextContent.Subtitle"
            android:justificationMode="inter_word"
            android:text="@string/lorem_ipsum"/>
    </LinearLayout>
</ScrollView>