<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/card_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="16dp"
    app:cardCornerRadius="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
            <ImageView
                android:id="@+id/img_wisata"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                tools:src="@tools:sample/avatars"
                android:background="@drawable/shape_left_rounded"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="16dp">
            <TextView
                android:id="@+id/tv_nama"
                style="@style/TextContent"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/green_500"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/nama_wisata"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="16dp">
                <ImageView
                    style="@style/MiniIcon"
                    android:src="@drawable/ic_baseline_attach_money_24"
                    app:tint="@color/green_500"/>
                <TextView
                    style="@style/TextContentNoMargin.Subtitle"
                    android:textSize="14sp"
                    android:text="@string/mata_uang"/>
                <TextView
                    android:id="@+id/tv_harga_tiket"
                    android:textSize="14sp"
                    style="@style/TextContentNoMargin.Subtitle"
                    android:text="@string/harga_tiket"/>
                <TextView
                    style="@style/TextContentNoMargin.Subtitle"
                    android:textSize="10sp"
                    android:text="/tiket"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp">
                <ImageView
                    style="@style/MiniIcon"
                    android:src="@drawable/ic_baseline_location_on_24"
                    app:tint="@color/green_500"/>
                <TextView
                    android:id="@+id/tv_alamat"
                    android:textSize="14sp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    style="@style/TextContentNoMargin.Subtitle"
                    android:text="@string/lorem_ipsum"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="8dp"
                android:gravity="right"
                android:layout_marginTop="8dp">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_favorite"
                    app:icon="@drawable/ic_baseline_favorite_border_24"
                    app:iconTint="@color/red_500"
                    android:text="0"
                    android:layout_marginRight="8dp"
                    style="@style/MaterialButtonRounded"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_share"
                    app:icon="@drawable/ic_baseline_share_24"
                    app:iconTint="@color/blue_500"
                    style="@style/MaterialButtonRounded"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_deskripsi"
                style="@style/TextContent.Subtitle"
                android:layout_marginTop="8dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:visibility="gone"
                android:text="@string/lorem_ipsum"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>